# urban_django

./: pyproject.toml
urban_django/UrbanDjango/: db.sqlite3
urban_django/UrbanDjango/UrbanDjango/: settings.py  urls.py
urban_django/UrbanDjango/static/task1/: styles.css
urban_django/UrbanDjango/static/task4/: styles.css
urban_django/UrbanDjango/task1/: admin.py  forms.py  models.py  urls.py  views.py
urban_django/UrbanDjango/task1/migrations/: 0001_initial.py  0002_news.py  0003_alter_news_options.py
urban_django/UrbanDjango/task2/: urls.py  views.py
urban_django/UrbanDjango/task3/: urls.py  views.py
urban_django/UrbanDjango/task4/: urls.py  views.py
urban_django/UrbanDjango/task5/: forms.py  urls.py  views.py
urban_django/UrbanDjango/templates/fifth_task/: registration_page.html
urban_django/UrbanDjango/templates/first_task/: cart.html  main.html  menu.html  news.html  registration_page.html  shop.html
urban_django/UrbanDjango/templates/fourth_task/: cart.html  main.html  menu.html  shop.html
urban_django/UrbanDjango/templates/second_task/: class_view.html  function_view.html
urban_django/UrbanDjango/templates/third_task/: cart.html  main.html  shop.html
