[tool.poetry]
name = "urban-django"
version = "0.1.0"
description = ""
authors = ["thrve <hithrv@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
litecli = "^1.13.2"
pgcli = "^4.1.0"

[tool.ruff]
line-length = 120
ignore = ["F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
